--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-server.port: 9000
+server.port: 9009
+logger.root.level: info
 spring:
   datasource:
    url: jdbc:mysql://${db.middleware.host}:3306/${db.middleware.dbname}?useUnicode=true&serverTimezone=Europe/Moscow&characterEncoding=UTF-8
@@ -29,7 +30,7 @@ spring.cache:
   cache-names: gl-projects,gl-builds,nexus,gl-env-branches,gl-pipelines,gl-versions,features,builds,qa-builds,gl-jobs
   guava.spec: maximumSize=300,expireAfterAccess=600s
 ---
-spring.profiles: local,test
+spring.profiles: local,test,dev
 db.middleware:
   host: 172.24.1.31
   dbname: middleware
