--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.shoppinglive</groupId>
     <artifactId>deploy-tool</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <name>deploy-tool</name>
     <description>Deployment tool for MW services</description>
